--- a/documentation/meeting_notes/md/05_09_2022.md
+++ b/documentation/meeting_notes/md/05_09_2022.md
@@ -4,19 +4,16 @@
 
 \- Finding out about the required/possible technologies and creating IP from that might provide additional use cases and ways of application → Definitely desired
 
-**Tasks**
+## Tasks
 
 Stay essentially the same: Deeper look into assigned topics will help the most.
 
 Focus on detailing discussed approaches and providing more research on them \*or\* even other approaches to the problem at hand.
 
-**Look out**
-
 \- no CTO on board yet
-
 \- Idea: Any connections/networks? Anybody who might want to / has the resources to work on Translue?
 
-**Business aspects**
+## Business aspects
 
 \- Translue underwent changes in the past: Objective changed towards text recognition
 
